--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
        }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="../../dist/scripts/vendor.e6a17786.js"></script> <script src="../../dist/scripts/scripts.b96d63dd.js"></script>
+       ga('send', 'pageview');</script> <script src="/scripts/vendor.e6a17786.js"></script> <script src="../../dist/scripts/scripts.b96d63dd.js"></script>
