--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Jewelry</a></li>
+              <li class="active"><a href="#/jewelry/earrings">Jewelry</a></li>
               <li class="active"><a href="#/about">About</a></li>
             </ul>
           </div>
@@ -86,6 +86,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/item.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
