--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/jewelry/earrings">Jewelry</a></li>
+              <li class="active"><a href="#/jewelry/0/earrings">Jewelry</a></li>
               <li class="active"><a href="#/about">About</a></li>
             </ul>
           </div>
