--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,8 @@
           <div ng-controller="navController" class="collapse navbar-collapse" id="js-navbar-collapse">
               <nav-menu></nav-menu>
               <ul class="nav navbar-nav secondaryNavbar">
-                  <li class="active"><a href="#/about">About</a></li>
-                  <li class="active"><a href="#/jewelry/wish-list">Wish List</a></li>
+                  <li class="mainNavLink"><a href="#/about">About</a></li>
+                  <li class="mainNavLink"><a href="#/jewelry/wish-list">Wish List</a></li>
               </ul>
 
           </div>
