--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
        }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
        ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');</script> <script src="scripts/vendor.bcaa8f75.js"></script><script src=/retailer-accordion-display/scripts/vendor.e6a17786.js></script><script src=/retailer-accordion-display/scripts/scripts.b96d63dd.js></script>
+       ga('send', 'pageview');</script></script><script src=/retailer-accordion-display/scripts/vendor.e6a17786.js></script><script src=/retailer-accordion-display/scripts/scripts.b96d63dd.js></script>
