--- a/app/index.html
+++ b/app/index.html
@@ -85,11 +85,13 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/services.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/controllers/item.js"></script>
         <script src="scripts/controllers/wishList.js"></script>
+
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
