--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
             <a class="navbar-brand" href="#/">retailer</a>
           </div>
 
-          <div ng-controller="navController" class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div ng-controller="NavController" class="collapse navbar-collapse" id="js-navbar-collapse">
               <nav-menu></nav-menu>
               <ul class="nav navbar-nav secondaryNavbar">
                   <li class="mainNavLink"><a href="#/about">About</a></li>
@@ -86,12 +86,16 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/services.js"></script>
+        <script src="scripts/services/urlPath.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/grid.js"></script>
+        <script src="scripts/filters/firstLetterCaps.js"></script>
         <script src="scripts/controllers/nav.js"></script>
+        <script src="scripts/directives/navMenu.js"></script>
         <script src="scripts/controllers/item.js"></script>
+        <script src="scripts/directives/wishListButton.js"></script>
         <script src="scripts/controllers/wishList.js"></script>
-
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
