--- a/app/index.html
+++ b/app/index.html
@@ -96,6 +96,7 @@
         <script src="scripts/controllers/item.js"></script>
         <script src="scripts/directives/wishListButton.js"></script>
         <script src="scripts/controllers/wishList.js"></script>
+        <script src="scripts/directives/wishListItem.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
